--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Accessibile a tutti 🌟»>
-<meta property="og:description" content="Facile da fare a casa ❤️»>
-<meta property="og:image" content="https://i.ibb.co/z639jsh/tov7.jpg">
+<meta property="og:title" content="Facile da fare a casa ❤️">
+<meta property="og:description" content="Accessibile a tutti 🌟">
+<meta property="og:image" content="https://i.ibb.co/Tc4pbPs/tov12.jpg">
 
 <meta charset="utf-8">
 <script type="text/javascript" src="jquery.js">
